fix(tabs): 解决按shift键，有蓝框 (#1609)

--- a/src/tabs/style/index.less
+++ b/src/tabs/style/index.less
@@ -27,6 +27,7 @@
       text-align: center;
       background-color: transparent;
       border: none;
+      outline: none;
       cursor: pointer;
       size: 14px;
       .text-body1();
